test_programs/compile_failure/noirc_frontend_tests_unused_items_no_warning_on_inner_struct_when_parent_is_used/src/main.nr

    struct Bar {
        inner: [Field; 3],
    }

    struct Foo {
        a: Field,
        bar: Bar,
    }

    fn main(foos: [Foo; 1]) {
        assert_eq(foos[0].a, 10);
    }
    